# Quantum-High-Level-Interface

./: .gitignore  CMakeLists.txt  CudaQWSL.code-profile  README.md  benchmarkingData.cpp  cudaQBenchmark.cpp  groverBenchmarking.cpp  imageFile.csv  imageFile2.csv  main.cpp  rawTestering.cu  testRunner.cpp
CuQuantumControl/: Accessor.cpp  Accessor.hpp  AmplitudeWriter.cu  AmplitudeWriter.hpp  ApplyGates.cu  ApplyGates.hpp  ApplySampler.cu  ApplySampler.hpp  BugRunner.cu  BugTest.hpp  CMakeLists.txt  Helper.hpp  MatriceDefinitions.hpp  Normalise_d.cu  Normalise_d.hpp  Precision.hpp  QftRhoWise.cu  QftStateVec.cu  QftStateVec.hpp  StateObject.cpp  StateObject.hpp  SwapGates.cu  SwapGates.hpp  Sys.cu  Sys.hpp  Utilities.cpp  Utilities.hpp  helper.cpp  helper.hpp  stateContracter.cpp
CuSparseControl/: ApplyMatrixA.cu  ApplyMatrixA.hpp  ApplySparseCSRMat.cu  ApplySparseCSRMat.hpp  CMakeLists.txt  ChebyshevMatrixExponential.cu  ChebyshevMatrixExponential.hpp  ChebyshevMatrixExponentialCoeff.cu  ChebyshevMatrixExponentialCoeff.hpp  SparseDenseConvert.cu  SparseDenseConvert.hpp  SparseGate.cu  SparseGate.hpp  SparseGateBULK.cu  SparseGateBULK.hpp  SparseHelper.hpp  SparseMatrixExponential.cu  SparseMatrixExponential.hpp  Sys.cu  Sys.hpp  TaylorSparseMatrixExponential.cu
CudaControl/: ApplyMatrixA.cu  ApplyMatrixA.hpp  CMakeLists.txt  CudaTranspose.cu  CudaTranspose.hpp  Helper.hpp  Sys.cu  Sys.hpp
CudaQControl/: CMakeLists.txt  optimizingSystem.cpp  optimizingSystem.hpp  stateContracter.cpp  stateContracter.hpp  sys.cpp
CuquantumControl/: ApplyGateTest.cu  ApplyGateTest.hpp
Examples/: CMakeLists.txt  EdricExample.cu  UnifiedMemExample.cu  accessor.cu  cusparseExample.cpp  cusparseExample.cu  sampler.cu
Examples/compatibilityTest/: a.out  compiler.sh  cuQuantum.cu  cudaQ.cpp  linker.sh  main.cpp
Examples/compatibilityTest/compare/: nvq
Removed/: ImageReader.cpp  StateContractor.cpp
Runner/: ApplyIRadon.cu  ApplyIRadon.hpp  BenchmarkAgainstSource.hpp  CMakeLists.txt  ChebyshevAccuracy.hpp  CircuitTest.cu  CircuitTest.hpp  GroverTest.cu  GroverTest.hpp  HHL_Helper.hpp  OpenMPTest.cpp  OpenMPTest.hpp  SparseGateSpeeds.hpp  SparseGateSpeedsBulk.hpp  TestingCuQuantum.cu  TestingCuQuantum.hpp  TestingInitSpeeds.hpp  test.cu
compatibilityTest/compare/: cuquantum-c  cuquantumFull
functionality/: CMakeLists.txt  ClockTimer.cpp  ClockTimer.hpp  FUNCTION_MACRO_UTIL.hpp  GetAdjMat.cpp  GetAdjMat.hpp  ImageReader.hpp  Linspace.cpp  Linspace.hpp  OddRound.cpp  OddRound.hpp  RangeCompileTime.hpp  ReadCsv.hpp  SaveVectors.hpp  SquareNorm.cpp  SquareNorm.hpp  Transpose.cpp  Transpose.hpp  Utilities.cpp  Utilities.hpp  WriteAdjMat.cpp  WriteAdjMat.hpp  fftShift.cpp  fftShift.hpp  randomArray.cpp  randomArray.hpp
functionality_image/: CMakeLists.txt  FilterAndLabel.cpp  FilterAndLabel.hpp  ImageUtil.cpp  ImageUtil.hpp  LoadImage.cpp  LoadImage.hpp  OneHotCode.cpp  OneHotCode.hpp
tests/: Accessor.cpp  AmplitudeWriter.cpp  ApplyGates.cpp  ApplyGatesH.cpp  ApplyGatesRX.cpp  ApplyGatesRY.cpp  ApplyGatesRZ.cpp  ApplyGatesX.cpp  ApplyGatesY.cpp  ApplyGatesZ.cpp  ApplySparseCSRMat.cpp  CMakeLists.txt  ChebyshevMatrixExponential.cpp  ChebyshevMatrixExponentialCoeff.cpp  GetAdjMat.cpp  LinspaceVec.cpp  Normalise_d.cpp  OddRound.cpp  OddRound.hpp  QftStateVec.cu  ReadCsv.cpp  SaveVectors.cpp  SparseDenseConvert_CSRToDense.cpp  SparseDenseConvert_DenseToCSR.cpp  SparseGate.cpp  SparseGateBulk.cpp  SparseMatrixExponential_pauli.cpp  StateObject.cpp  SwapGates.cpp  TaylorSparseMatrixExponential_pauli.cpp  Transpose.cpp  Utilities.cpp  Utillities_areDisjoint.cpp  Utillities_csr_csc.cpp  Utillities_isPowerOf2.cpp  WriteAdjMat.cpp  fftShift.cpp  fftShiftStride.cpp  stateContracter1Qubit.cpp  stateContracterAccessor.cpp
